--- a/index.html
+++ b/index.html
@@ -124,9 +124,51 @@
                                 </a>
                             </li>
 
-<!--                            <li class="nav-item">-->
-<!--                                <a class="nav-link" href="#">Page</a>-->
-<!--                            </li>-->
+
+<!--                            Login page Modal Start-->
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <i class="fas fa-sign-in-alt" data-toggle="modal" data-target="#loginPageModal"
+                                       style="color: red; font-size: 20px;"></i>
+                                </a>
+
+                                <div id="loginPageModal" class="modal fade">
+                                    <div class="modal-dialog modal-login">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <div class="avatar">
+                                                    <img class="profile-logo" src="https://mdbootstrap.com/img/Photos/Avatars/img%20%281%29.jpg">
+                                                </div>
+                                                <h4 class="modal-title">User Login</h4>
+                                                <button type="button" class="close" data-dismiss="modal"
+                                                        aria-hidden="true">&times;
+                                                </button>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form action="/examples/actions/confirmation.php" method="post">
+                                                    <div class="form-group">
+                                                        <input type="text" class="form-control" name="username"
+                                                               placeholder="Username" required="required">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <input type="password" class="form-control" name="password"
+                                                               placeholder="Password" required="required">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <button type="submit"
+                                                                class="btn btn-primary btn-lg btn-block login-btn">Login
+                                                        </button>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <a href="#">Forgot Password?</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+<!--                            Login page Modal End-->
                         </ul>
                     </div>
                 </div>
