project Form updated

--- a/site_management.html
+++ b/site_management.html
@@ -253,7 +253,25 @@
                         <div class="col-12">
                             <div class="card ">
                                 <div class="card-header text-center bg-dark text-white">
-                                    <h4> Site A</h4>
+                                    <div class="row">
+                                        <div class="col-11 text-center">
+                                            <h3>Site A</h3>
+                                            <h6>Site ID: 3001</h6>
+
+                                        </div>
+                                        <div class=" col-1 text-right">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <i data-toggle="modal" data-target="#modalAdd" class="fas fa-edit fa-lg "></i>
+
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="far fa-trash-alt fa-lg "></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                                 <div class="card-body shadow p-3 bg-white rounded">
                                     <div class="row">
@@ -261,30 +279,26 @@
                                             <ul class="list-group list-group">
                                                 <li class="list-group-item"> Project : Project01</li>
                                                 <li class="list-group-item">Site Name: Site A</li>
-                                                <li class="list-group-item">Site ID: 3001</li>
                                                 <li class="list-group-item">Start date: 20/05/2019</li>
-
+                                                <li class="list-group-item">Expected Completion Date: 08/09/2019</li>
 
                                             </ul>
                                         </div>
                                         <div class="col-4">
                                             <ul class="list-group list-group">
-                                                <li class="list-group-item">Expected Completion Date: 08/09/2019</li>
                                                 <li class="list-group-item"> Completion Date: 15/09/2019</li>
                                                 <li class="list-group-item"> Expected Handover Date: 20/09/2019</li>
                                                 <li class="list-group-item">Handover Date: 23/09/2019</li>
+                                                <li class="list-group-item">Site Description: lorem IPsom dolor</li>
                                             </ul>
                                         </div>
 
                                         <div class="col-4">
                                             <ul class="list-group list-group">
-                                                <li class="list-group-item">Site Description: lorem IPsom dolor</li>
+
                                                 <li class="list-group-item">Site Status: Pending</li>
 
                                             </ul>
-                                            <br>
-                                            <button type="button" class="btn btn-success btn-sm">Edit </button>
-                                            <button type="button" class="btn btn-danger btn-sm">Delete</button>
 
                                         </div>
 
@@ -303,7 +317,25 @@
                         <div class="col-12">
                             <div class="card ">
                                 <div class="card-header text-center bg-dark text-white">
-                                    <h4> Site B</h4>
+                                    <div class="row">
+                                        <div class="col-11 text-center">
+                                            <h3>Site B</h3>
+                                            <h6>Site ID: 3002</h6>
+
+                                        </div>
+                                        <div class=" col-1 text-right">
+                                            <div class="row">
+                                                <div class="col-6">
+                                                    <i data-toggle="modal" data-target="#modalAdd" class="fas fa-edit fa-lg "></i>
+
+                                                </div>
+                                                <div class="col-6">
+                                                    <i class="far fa-trash-alt fa-lg "></i>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+
                                 </div>
                                 <div class="card-body shadow p-3 bg-white rounded">
                                     <div class="row">
@@ -311,30 +343,26 @@
                                             <ul class="list-group list-group">
                                                 <li class="list-group-item"> Project : Project01</li>
                                                 <li class="list-group-item">Site Name: Site A</li>
-                                                <li class="list-group-item">Site ID: 3001</li>
                                                 <li class="list-group-item">Start date: 20/05/2019</li>
-
+                                                <li class="list-group-item">Expected Completion Date: 08/09/2019</li>
 
                                             </ul>
                                         </div>
                                         <div class="col-4">
                                             <ul class="list-group list-group">
-                                                <li class="list-group-item">Expected Completion Date: 08/09/2019</li>
                                                 <li class="list-group-item"> Completion Date: 15/09/2019</li>
                                                 <li class="list-group-item"> Expected Handover Date: 20/09/2019</li>
                                                 <li class="list-group-item">Handover Date: 23/09/2019</li>
+                                                <li class="list-group-item">Site Description: lorem IPsom dolor</li>
                                             </ul>
                                         </div>
 
                                         <div class="col-4">
                                             <ul class="list-group list-group">
-                                                <li class="list-group-item">Site Description: lorem IPsom dolor</li>
+
                                                 <li class="list-group-item">Site Status: Pending</li>
 
                                             </ul>
-                                            <br>
-                                            <button type="button" class="btn btn-success btn-sm">Edit </button>
-                                            <button type="button" class="btn btn-danger btn-sm">Delete</button>
 
                                         </div>
 
@@ -348,55 +376,7 @@
 
                 </div>
 
-                <div class="mt-5">
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="card ">
-                                <div class="card-header text-center bg-dark text-white">
-                                    <h4> Site C</h4>
-                                </div>
-                                <div class="card-body shadow p-3 bg-white rounded">
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <ul class="list-group list-group">
-                                                <li class="list-group-item"> Project : Project01</li>
-                                                <li class="list-group-item">Site Name: Site A</li>
-                                                <li class="list-group-item">Site ID: 3001</li>
-                                                <li class="list-group-item">Start date: 20/05/2019</li>
 
-
-                                            </ul>
-                                        </div>
-                                        <div class="col-4">
-                                            <ul class="list-group list-group">
-                                                <li class="list-group-item">Expected Completion Date: 08/09/2019</li>
-                                                <li class="list-group-item"> Completion Date: 15/09/2019</li>
-                                                <li class="list-group-item"> Expected Handover Date: 20/09/2019</li>
-                                                <li class="list-group-item">Handover Date: 23/09/2019</li>
-                                            </ul>
-                                        </div>
-
-                                        <div class="col-4">
-                                            <ul class="list-group list-group">
-                                                <li class="list-group-item">Site Description: lorem IPsom dolor</li>
-                                                <li class="list-group-item">Site Status: Pending</li>
-
-                                            </ul>
-                                            <br>
-                                            <button type="button" class="btn btn-success btn-sm">Edit </button>
-                                            <button type="button" class="btn btn-danger btn-sm">Delete</button>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
 
             </div>
 
