all forms and tables added to all pages

--- a/client management.html
+++ b/client management.html
@@ -242,8 +242,8 @@
                                                     </div>
 
                                                     <div class="form-row">
-                                                        <div class="form-group col-md-6">
-                                                            <button type="submit" class="btn btn-sm btn-info btn-base float-left">
+                                                        <div class="form-group col-md-12">
+                                                            <button type="submit" class="btn btn-sm btn-info btn-base float-right">
                                                                 Submit
                                                             </button>
                                                         </div>
