--- a/team_management.html
+++ b/team_management.html
@@ -226,14 +226,12 @@
 
 
                                                     <div class="form-row">
-                                                        <div class="form-group col-md-6">
-                                                            <button type="submit" class="btn btn-sm btn-info btn-base float-left">
+                                                        <div class="form-group col-md-12">
+                                                            <button type="submit" class="btn btn-sm btn-info btn-base float-right">
                                                                 Submit
                                                             </button>
                                                         </div>
-                                                        <div class="form-group col-md-6">
 
-                                                        </div>
                                                     </div>
                                                 </form>
                                             </div>
