--- a/unit_management.html
+++ b/unit_management.html
@@ -188,14 +188,14 @@
 
 
                                                     <div class="form-row">
-                                                        <div class="col-md-6">
+                                                        <div class="col-md-5">
                                                             <div class="form-group">
                                                                 <label for="exampleInputEmail1"> Name</label>
                                                                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                                                             </div>
                                                         </div>
 
-                                                        <div class="col-md-6">
+                                                        <div class="col-md-5">
                                                             <div class="form-group">
                                                                 <label for="exampleFormControlSelect1">Status</label>
                                                                 <select class="form-control" id="exampleFormControlSelect1">
@@ -208,20 +208,24 @@
 
                                                         </div>
 
+                                                        <div class="col-md-2">
+                                                            <div class="form-group">
+                                                                <br>
+                                                                <label for="exampleFormControlSelect1"></label>
+                                                                <button type="submit" class="btn btn-block btn-info btn-base float-right">
+                                                                    Submit
+                                                                </button>
+                                                            </div>
+
+                                                        </div>
 
                                                     </div>
 
 
 
                                                     <div class="form-row">
-                                                        <div class="form-group col-md-6">
-                                                            <button type="submit" class="btn btn-sm btn-info btn-base float-left">
-                                                                Submit
-                                                            </button>
-                                                        </div>
-                                                        <div class="form-group col-md-6">
 
-                                                        </div>
+
                                                     </div>
                                                 </form>
                                             </div>
