login and repeater form added

--- a/add_new_project.html
+++ b/add_new_project.html
@@ -24,57 +24,56 @@
 
 <div class="wrapper">
     <!-- Sidebar  -->
-    <nav id="sidebar">
-        <div class="sidebar-header">
-            <h3><a style="text-decoration: none; color: #fafafa" href="index.html"> RMS </a></h3>
-        </div>
+      <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3><a style="text-decoration: none; color: #fafafa" href="index.html"> RMS </a></h3>
+            </div>
 
-        <ul class="list-unstyled components">
-            <li>
-                <a href="client management.html" style="text-decoration: none;"> Client Management </a>
-            </li>
-            <li>
-                <a href="department_management.html" style="text-decoration: none;"> Department M4anagement </a>
-            </li>
-            <li>
-                <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
-            </li>
-            <li>
-                <a href="unit_management.html" style="text-decoration: none;"> Unit Management </a>
-            </li>
-            <li>
-                <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item
-                    Management </a>
-            </li>
-            <li>
-                <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Project
-                    Management</a>
-                <ul class="collapse list-unstyled" id="pageSubmenu">
-                    <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>
-                    <li><a href="project_management.html" style="text-decoration: none;"> View All Projects</a></li>
-                </ul>
-            </li>
+            <ul class="list-unstyled components">
+                <li>
+                    <a href="client management.html" style="text-decoration: none;"> Client Management </a>
+                </li>
+                <li>
+                    <a href="department_management.html" style="text-decoration: none;"> Department M4anagement </a>
+                </li>
+                <li>
+                    <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
+                </li>
+                <li>
+                    <a href="unit_management.html" style="text-decoration: none;"> Unit Management </a>
+                </li>
+                <li>
+                    <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item
+                        Management </a>
+                </li>
+                <li>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Project
+                        Management</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>
+                        <li><a href="project_management.html" style="text-decoration: none;"> View All Projects</a></li>
+                    </ul>
+                </li>
 
 
-            <li class="active">
-                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Site
-                    Management</a>
-                <ul class="collapse list-unstyled" id="homeSubmenu">
-                    <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
-                    <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
-                </ul>
-            </li>
+                <li class="active">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Site
+                        Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
+                    </ul>
+                </li>
 
-            <li>
-                <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition
-                    Management</a>
-                <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
-                     <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
-                    <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
-                </ul>
-            </li>
-        </ul>
-    </nav>
+                <li>
+                    <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition Management</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
+                       <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                        <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
 
     <!-- Page Content  -->
     <div id="content">
@@ -84,7 +83,7 @@
 
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
-                    <span>Toggle Sidebar</span>
+<!--                    <span>Toggle Sidebar</span>-->
                 </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
