--- a/add_new_requisition.html
+++ b/add_new_requisition.html
@@ -7,6 +7,13 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/js.js"></script>
+    <script src="js/repeater.js"></script>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://bootswatch.com/3/paper/bootstrap.min.css"/>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+            crossorigin="anonymous"></script>
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7a1c11509a.js" crossorigin="anonymous"></script>
@@ -83,7 +90,7 @@
 
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
-                    <span>Toggle Sidebar</span>
+                    <!--                    <span>Toggle Sidebar</span>-->
                 </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -229,6 +236,67 @@
         <!--        Add Project Form End-->
 
 
+        <!--        Repeatble form Start-->
+        <div class="container">
+
+
+            <!-- Editable table -->
+            <div class="card">
+                <h3 class="card-header text-center font-weight-bold text-uppercase py-4">Repeatable table</h3>
+                <div class="card-body">
+                    <div id="table" class="table-editable">
+
+                        <div id="repeater">
+                            <!-- Repeater Heading -->
+
+                            <span class="table-add float-right mb-3 mr-2">
+                                                          <a href="#!" class="text-success repeater-add-btn">
+                                                              <i class="fas fa-plus fa-2x" aria-hidden="true">
+                                                              </i></a></span>
+
+
+                            <div class="items" data-group="test">
+                                <!-- Repeater Content -->
+                                <div class="item-content">
+
+                                    <table class="table table-bordered table-responsive-md table-striped text-center">
+                                        <thead>
+                                        <tr>
+                                            <th class="text-center">Item</th>
+                                            <th class="text-center">Unit Type</th>
+                                            <th class="text-center">Quantity</th>
+                                            <th class="text-center">Price</th>
+                                            <th class="text-center">Total</th>
+                                            <th class="text-center">Action</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        <tr>
+                                            <td class="pt-3-half" contenteditable="true"></td>
+                                            <td class="pt-3-half" contenteditable="true"></td>
+                                            <td class="pt-3-half" contenteditable="true"></td>
+                                            <td class="pt-3-half" contenteditable="true"></td>
+                                            <td class="pt-3-half" contenteditable="true"></td>
+
+                                            <td>
+                                                <button type="button" class="btn btn-success">Submit
+                                                </button>
+                                                <button type="button" class="btn btn-danger remove-btn">Remove</button>
+                                            </td>
+                                        </tr>
+                                        <!-- This is our clonable table line -->
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--        Repeatble form End-->
+
+
         <!-- Scroll to Top -->
         <a id="scroll-to-top" href="#" class="btn btn-warning btn-lg" role="button" title="Return to top of page"
            data-toggle="tooltip" data-placement="left"><i class="fa fa-arrow-up"></i></a>
@@ -278,6 +346,15 @@
 </div>
 <!--Modal: Login with Avatar Form-->
 
+
+<!-- Import repeater js  -->
+<script src="js/repeater.js" type="text/javascript"></script>
+<script>
+    /* Create Repeater */
+    $("#repeater").createRepeater({
+        showFirstItemToDefault: true,
+    });
+</script>
 
 <!--Bootstrap CDN-->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
