--- a/project_management.html
+++ b/project_management.html
@@ -5,18 +5,24 @@
     <meta charset="UTF-8">
     <title>Project Management</title>
 
+
     <link rel="stylesheet" href="css/style.css">
     <script src="js/js.js"></script>
     <script src="js/jquery-3.4.1.min.js"></script>
 
+     <!-- Bootstrap CSS CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <!-- Our Custom CSS -->
 
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@0;1&display=swap" rel="stylesheet">
+    <!-- Font Awesome JS -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js" integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js" integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/7a1c11509a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.min.css" integrity="sha256-SMGbWcp5wJOVXYlZJyAXqoVWaE/vgFA5xfrH3i/jVw0=" crossorigin="anonymous" />
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 </head>
 
 <body>
@@ -24,7 +30,7 @@
 
     <div class="wrapper">
         <!-- Sidebar  -->
-        <nav id="sidebar">
+            <nav id="sidebar">
             <div class="sidebar-header">
                 <h3><a style="text-decoration: none; color: #fafafa" href="index.html"> RMS </a></h3>
             </div>
@@ -34,7 +40,7 @@
                     <a href="client management.html" style="text-decoration: none;"> Client Management </a>
                 </li>
                 <li>
-                    <a href="department_management.html" style="text-decoration: none;"> Department M4anagement </a>
+                    <a href="department_management.html" style="text-decoration: none;"> Department Management </a>
                 </li>
                 <li>
                     <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
@@ -44,20 +50,30 @@
                 </li>
                 <li>
                     <a href="requisitions_item_management.html" style="text-decoration: none;"> Requisitions Item
-                           Management </a>
+                        Management </a>
                 </li>
-                <li>
+<!--                <li>-->
+<!--                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Project-->
+<!--                        Management</a>-->
+<!--                    <ul class="collapse list-unstyled" id="pageSubmenu">-->
+<!--                        <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>-->
+<!--                        <li><a href="project_management.html" style="text-decoration: none;"> View All Projects</a></li>-->
+<!--                    </ul>-->
+<!--                </li>-->
+
+                 <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle"> Project
-                           Management</a>
+                        Management</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li><a href="add_new_project.html" style="text-decoration: none;">Add New Project </a></li>
                         <li><a href="project_management.html" style="text-decoration: none;"> View All Projects</a></li>
                     </ul>
                 </li>
 
+
                 <li class="active">
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Site
-                           Management</a>
+                        Management</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li><a href="add_new_site.html" style="text-decoration: none;">Add New Site</a></li>
                         <li><a href="site_management.html" style="text-decoration: none;"> View All Sites</a></li>
@@ -67,7 +83,7 @@
                 <li>
                     <a href="#homeSubmenuRequisition" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Requisition Management</a>
                     <ul class="collapse list-unstyled" id="homeSubmenuRequisition">
-                        <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
+                       <li><a href="add_new_requisition.html" style="text-decoration: none;">Add New Requisition</a></li>
                         <li><a href="site_management.html" style="text-decoration: none;"> View All Requisition</a></li>
                     </ul>
                 </li>
@@ -82,7 +98,7 @@
 
                     <button type="button" id="sidebarCollapse" class="btn btn-info">
                        <i class="fas fa-align-left"></i>
-                       <span>Toggle Sidebar</span>
+<!--                       <span>Toggle Sidebar</span>-->
                    </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                        <i class="fas fa-align-justify"></i>
@@ -507,20 +523,20 @@
 
 
 
-        <!-- jQuery CDN - Slim version (=without AJAX) -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <!-- Popper.JS -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-        <!-- Bootstrap JS -->
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+       <!-- jQuery CDN - Slim version (=without AJAX) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
-        <script type="text/javascript">
-            $(document).ready(function() {
-                $('#sidebarCollapse').on('click', function() {
-                    $('#sidebar').toggleClass('active');
-                });
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
             });
-        </script>
+        });
+    </script>
     </div>
 </body>
 
