--- a/unit_management.html
+++ b/unit_management.html
@@ -50,7 +50,7 @@
                 <a href="client management.html" style="text-decoration: none;"> Client Management </a>
             </li>
             <li>
-                <a href="department_management.html" style="text-decoration: none;"> Department M4anagement </a>
+                <a href="department_management.html" style="text-decoration: none;"> Department Management </a>
             </li>
             <li>
                 <a href="team_management.html" style="text-decoration: none;"> Team Management </a>
@@ -100,7 +100,7 @@
 
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                     <i class="fas fa-align-left"></i>
-                    <span>Toggle Sidebar</span>
+<!--                    <span>Toggle Sidebar</span>-->
                 </button>
                 <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
